[gd_scene load_steps=5 format=3 uid="uid://bown23rvnfc4g"]

[ext_resource type="Script" uid="uid://5375qxkes1m6" path="res://Scenes/Game/Scripts/enemy_1.gd" id="1_nis3v"]
[ext_resource type="Texture2D" uid="uid://cvo7smmjpgmov" path="res://icon.svg" id="1_suyoc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_igjjb"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nis3v"]
radius = 60.0083

[node name="Goblin" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
script = ExtResource("1_nis3v")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.309804, 0.231373, 1)
texture = ExtResource("1_suyoc")

[node name="Life" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = -63.0
offset_top = -96.0
offset_right = 63.0
offset_bottom = -69.0
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="goblin" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goblin"]
shape = SubResource("CircleShape2D_igjjb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nis3v")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
target_desired_distance = 30.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[node name="Navigation_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Stun_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="goblin" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="goblin" to="." method="_on_area_2d_mouse_exited"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Navigation_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_stun_timer_timeout"]
